--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -49,7 +49,14 @@
 
 .charts-container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 70% 30%; /* Adjusted to 70% and 30% */
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.charts-container-1 {
+  display: grid;
+  grid-template-columns: 50% 50%; /* Adjusted to 70% and 30% */
   gap: 20px;
   margin-bottom: 20px;
 }
@@ -61,12 +68,10 @@
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-  flex: 1;
 }
 
 /* Specific styling for Traffic by Website and List */
 .traffic-by-website {
-  flex: 1;
   background-color: #fff;
   padding: 20px;
   border-radius: 10px;
@@ -116,13 +121,27 @@
   color: #f44336; /* Red for negative changes */
 }
 
-/* Additional style for Marketing & SEO */
-.line-chart {
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-  margin-top: 20px;
+.pie-chart {
+  text-align: center;
+}
+
+.location-list {
+  list-style-type: none;
+  padding: 0;
+  margin-top: 10px;
+}
+
+.location-list li {
+  display: inline-block;
+  margin-right: 15px;
+}
+
+.location-color {
+  display: inline-block;
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+  margin-right: 5px;
 }
 
 /* Responsive styles */
@@ -130,14 +149,16 @@
   .charts-container {
     grid-template-columns: 1fr;
   }
-
-  .stats-cards {
-    flex-wrap: wrap;
+  .charts-container-1 {
+    grid-template-columns: 1fr;
   }
 }
 
 @media (max-width: 768px) {
   .charts-container {
+    grid-template-columns: 1fr;
+  }
+  .charts-container-1 {
     grid-template-columns: 1fr;
   }
 
